qslog-front/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qslog-front
spec:
  rules:
    - host: log.qsse.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qslog-front
                port:
                  number: 80
